tests/deploy_errors/pipeline_bad_query/error.txt
Error: 
    5 |   { "snot": "naughty badger", "badger": "dark #{args.snot}" }
    6 | pipeline
    7 |    dark horse
      |    ^^^^ Found the token `dark` but expected one of `<doc-comment>`, `create`, `define`, `mod`, `select`
    8 | end;
    9 |
